<resources>
    <string name="app_name">Akeso Band Companion</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_cancel">About</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="update">Update Band</string>
    <string name="starter">Tap the button below to get started!</string>
    <string name="begin">Begin</string>
    <string name="name">What is your full name?</string>
    <string name="nameHint">Name</string>
    <string name="next">Next</string>
    <string name="allergies">What are you allergic to?</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="conditions">What medical conditions do you have?</string>
    <string name="medications">What medications are you taking?</string>
    <string name="contact1">Who is your emergency contact?</string>
    <string name="phone">Phone Number</string>
    <string name="insurance">What is your insurance information?</string>
    <string name="provider">Insurance Provider</string>
    <string name="ID">ID Number</string>
    <string name="skip">Skip</string>
    <string name="notes">Add any helpful notes here.</string>
    <string name="review">Review</string>
    <string name="confirmit">Does everything look right?</string>
    <string name="back">If something looks wrong tap the back button to go back</string>
    <string name="confirm">Everything looks good!</string>
    <string name="size">Space used: x/888</string>
    <string name="contact">Emergency Contact</string>
    <string name="scan">Please tap your Akeso Band to the back of your phone</string>
    <string name="erase">Erase Band</string>
    <string name="cancel">Cancel</string>
    <string name="akeso">Technology that saves lives!</string>
    <string name="info">Information Center</string>

</resources>
